[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigashuffle"
version = "0.1.0"
description = "Shuffle-buffer dataloaders for PyTorch using local Unix socket coordination and shared memory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "setproctitle",
  "torch",
]

[project.scripts]
gigashuffle-stats = "gigashuffle.stats:main"

[tool.setuptools.packages.find]
include = ["gigashuffle", "gigashuffle.*"]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
]
